Corrected too big subheadings in the blog

--- a/style.css
+++ b/style.css
@@ -1012,6 +1012,7 @@ h1, h2, h3, h4 {
 }
 
 h1 p {
+    font-size: var(--font-size);
     font-weight: normal;
     text-shadow: none;
     text-align: center;
